#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(FTMP, 0.0.1, masakazu.minamiyama@gmail.com)
AM_INIT_AUTOMAKE(FTMP, 0.0.1, no-define)
AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
